--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "mongoose": "^5.5.3",
     "nodemon": "^1.18.10",
     "twilio": "^3.30.0"
   }
